# fx-engine-take-home

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_quotes_executions_ledger.py
app/api/: errors.py  main.py  middleware.py  schemas.py
app/api/routes/: __init__.py  admin.py  customers.py  executions.py  health.py  quotes.py
app/domain/: __init__.py  clock.py  currency.py  execution.py  money.py  quote.py  rate_source.py  staleness.py
app/infra/: config.py  db.py
app/infra/models/: __init__.py  balance.py  customer.py  execution.py  ledger_entry.py  quote.py  rate.py  types.py
app/infra/rate_provider/: __init__.py  cache.py  circuit_breaker.py  exchangeratesapi.py  scheduler.py  singleflight.py
app/infra/repositories/: __init__.py  balance.py  customer.py  execution.py  ledger.py  quote.py  rate.py
app/observability/: __init__.py  logging.py  metrics.py
app/services/: __init__.py  execute.py  quote_pricing.py
docs/: DECISIONS.md  DECISIONS_LOG.md  REVIEW.md  SPEC.md
scripts/: load_test.py  seed_rates.py
tests/integration/: conftest.py  test_api_postgres.py  test_concurrency_n20.py  test_execute_postgres.py  test_rate_provider_postgres.py  test_repositories_postgres.py
tests/property/: test_decimal_invariants.py
tests/unit/: test_circuit_breaker.py  test_currency.py  test_execute_service_sqlite.py  test_money.py  test_quote_pricing.py  test_rate_provider_sqlite.py  test_repositories_sqlite.py  test_singleflight.py
