[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-engine"
version = "0.1.0"
description = "Umba FX engine -- take-home assignment"
requires-python = ">=3.11"
authors = [{ name = "Erick Aboge" }]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "sqlalchemy>=2.0.36,<3",
    "httpx>=0.27,<1",
    "structlog>=24.4,<26",
    "prometheus-client>=0.21,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "hypothesis>=6.115,<7",
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# planted_bugs/ is read-only per CLAUDE.md §7; do not lint or format it.
extend-exclude = ["planted_bugs", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
# Allow ambiguous-unicode-name nits and unused __init__ imports.
ignore = ["RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.domain.*"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]
